corrected overlapping lines

--- a/virkailijan-stp/virkailijan-stp-ui/src/main/webapp/css/other.css
+++ b/virkailijan-stp/virkailijan-stp-ui/src/main/webapp/css/other.css
@@ -154,7 +154,7 @@ h2 {
 
 h5 {
 	margin-bottom: 5px; 
-	line-height: 10px;
+	line-height: 17px;
 }
 
 .table th, .table td {
